--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
             <span class="insta-user">@mari_franchini</span>
             <div class="links-container">
                 <a href="" class="link">Link 1</a>
-                <a href="" class="link">Link 1</a>
-                <a href="" class="link">Link 1</a>
-                <a href="" class="link">Link 1</a>
+                <a href="" class="link">Link 2</a>
+                <a href="" class="link">Link 3</a>
+                <a href="" class="link">Link 4</a>
             </div>
             <div class="social-container">
 
-                <a href="" class="social">
+                <a href="https://www.twitch.tv/mari_franchini" target="_blank" class="social">
                     <img src="./assets/twitch.svg" alt="Twitch">
                 </a>
-                <a href="" class="social">
+                <a href="https://www.instagram.com/mari_franchini" target="_blank" class="social">
                     <img src="./assets/instagram.svg" alt="Instagram">
                 </a>
-                <a href="" class="social">
+                <a href="https://www.linkedin.com/in/marianna-franchini-watai/" target="_blank" class="social">
                     <img src="./assets/linkedin.svg" alt="Linkedin">
                 </a>
-                <a href="" class="social">
+                <a href="https://github.com/marifranchini" target="_blank" class="social">
                     <img src="./assets/github.svg" alt="Github">
                 </a>
             </div>
